[workspace]
members = ["cli"]

[package]
name = "hnsw-itu"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
nanoserde = "0.1.37"
rayon = "1.8.1"
time = { version = "0.3.34", features = ["formatting", "local-offset"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "time"] }
