[workspace]
members = ["cli"]

[package]
name = "hnsw-itu"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
min-max-heap = "1.3.0"
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"], optional = true }
tracing = { version = "0.1.40", optional = true }
