[package]
name = "hnsw-itu-cli"
version = "0.1.0"
edition = "2021"
description = "CLI wrapper for hnsw-itu"

[[bin]]
name = "hnsw-itu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.0", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
hdf5 = "0.8.1"
hnsw-itu = { version = "0.1.0", path = ".." }
nanoserde = "0.1.37"
ndarray = "0.15.6"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "distance"
path = "benches/distance/bench.rs"
harness = false
