[package]
name = "hnsw-itu-cli"
version = "0.1.0"
edition = "2021"
description = "CLI wrapper for hnsw-itu"

[[bin]]
name = "hnsw-itu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
clap = { version = "4.5.0", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
hdf5 = "0.8.1"
hnsw-itu = { version = "0.1.0", path = "..", features = ["serde", "tracing"] }
ndarray = "0.15.6"
rand = "0.8.5"
serde = "1.0.197"
time = { version = "0.3.34", features = ["formatting", "local-offset"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "time"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "distance"
path = "benches/distance/bench.rs"
harness = false

[[bench]]
name = "set_insert"
path = "benches/set/insert.rs"
harness = false

[[bench]]
name = "set_contains"
path = "benches/set/contains.rs"
harness = false
